@@ -23,9 +23,18 @@ repositories {
     mavenCentral()
 }
 
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2024.0.0"
+    }
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -41,11 +50,18 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'  // JUnit, Mockito, AssertJ
+    testImplementation 'org.mockito:mockito-core'                           // Дополнительно для Mockito
+    testImplementation 'org.testcontainers:junit-jupiter'                   // Testcontainers для интеграционных тестов
+    testImplementation 'org.testcontainers:postgresql'                      // Testcontainers для PostgreSQL
+    testImplementation 'org.springframework.boot:spring-boot-starter-web'   // Для MockMvc
+    testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-stub-runner'  // Feign
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'            // Для JUnit
 
 }
 
 tasks.named('test') {
-    useJUnitPlatform()
+    useJUnitPlatform()                        // Включаем поддержку JUnit Platform
+    jvmArgs '-XX:+EnableDynamicAgentLoading'  // Для предотвращения предупреждений о динамической загрузке агента
 }
